# FastTrackStudio

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DIOXUS_VS_TYPESCRIPT_ANALYSIS.md  FastTrackStudio.code-workspace  IMPLEMENTATION_PLAN.md  UNIVERSAL_NETWORK_ARCHITECTURE.md  docker-compose.yml  flake.nix  justfile
apps/cli/: Cargo.toml
apps/cli/src/: app.rs  colors.rs  main.rs  ui.rs
apps/cli/src/handlers/: mod.rs  mouse.rs  navigation.rs  transport.rs
apps/cli/src/widgets/: bottom_controls.rs  mod.rs  segmented_progress_bar.rs  song_list.rs  status_bar.rs  top_bar.rs
apps/desktop/: .gitignore  Cargo.toml  EFFECT_ATOM_MIGRATION.md  README.md  WEB_SERVER_SETUP.md  bindings.ts  demo-server.js  package.json  pnpm-lock.yaml  tailwind.css  tsconfig.json  vite.config.ts
apps/desktop/assets/: main.css  tailwind.css
apps/desktop/src/: App.css  chart_connection.rs  chords_connection.rs  iroh_connection_manager.rs  lyrics_connection.rs  main.rs  main.tsx  reaper_connection.rs  routeTree.gen.ts  setlist_commands.rs  setlist_connection.rs  track_commands.rs  tracks_connection.rs  transport_connection.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs  web_server.rs
apps/desktop/src/atoms/: derived.ts  runtime.ts  types.ts  websocket.ts
apps/desktop/src/components/: AppStateExample.tsx  MainApp.tsx  Navigator.tsx  ProgressBar.tsx  SetlistDebugDialog.tsx  SimpleAppState.tsx  StatusCards.tsx  TransportBarWorking.tsx  TransportControls.tsx  TransportTest.tsx  theme-provider.tsx
apps/desktop/src/contexts/: WebSocketContext.tsx
apps/desktop/src/hooks/: use-websocket-adapter.ts  use-websocket-atoms.ts  use-websocket.ts  useAppState.ts  (+1 more)
apps/dioxus-test/: ARCHITECTURE.md  Cargo.toml  Dioxus.toml  README.md  STATE_MANAGEMENT.md  tailwind-config.js
apps/dioxus-test/assets/: main.css  tailwind.css
apps/dioxus-test/src/: config.rs  main.rs  messages.rs
apps/fts-control/: Cargo.toml  Dioxus.toml
apps/fts-control/src/: main.rs
apps/native-test/: Cargo.toml  Dioxus.toml
apps/native-test/assets/: tailwind.compiled.css  tailwind.css
apps/native-test/src/: main.rs
apps/native-testing/: .gitignore  .gitmodules  Cargo.toml  build.rs  flake.nix  tailwind-config.js
apps/native-testing/src/: glow.rs  main.rs
apps/playground/: Cargo.toml  tailwind-config.js  tailwind.css
apps/playground/assets/: tailwind.css
apps/playground/src/: blog.rs  counter.rs  main.rs  navbar.rs  reaper_connection.rs  setlist_connection.rs  setlist_display.rs  transport_display.rs
apps/plugins/eq/: Cargo.toml
apps/plugins/gain/: Cargo.toml
apps/reaper_extension/: Cargo.toml  FEATURES.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md
apps/reaper_extension/src/: action_registry.rs  actions.rs  app.rs  color_utils.rs  command_handler.rs  lib.rs  menu.rs  reaper_markers.rs  reaper_project.rs  reaper_rpc_server.rs  reaper_setlist.rs  reaper_tracks.rs  reaper_transport.rs  setlist_stream.rs  setlist_sync.rs  tracing_config.rs  track_change_detection.rs  track_state_manager.rs  transport_stream.rs  websocket_client.rs  websocket_server.rs  websocket_state.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/tarpc-demo/: Cargo.toml  README.md
apps/tarpc-demo/src/: client.rs  lib.rs  server.rs
apps/unified-service-demo/: Cargo.toml
apps/unified-service-demo/src/: lib.rs
libs/monarchy/: Cargo.toml  SPECIFICATION.md
libs/monarchy-derive/: Cargo.toml
libs/monarchy-derive/src/: lib.rs
libs/monarchy/examples/: tree_format.rs
libs/monarchy/src/: config.rs  display.rs  error.rs  field.rs  field_value.rs  group.rs  item.rs  lib.rs  metadata.rs  organizer.rs  parser.rs  scoped.rs  structure.rs  test_utils.rs  traits.rs  utils.rs  visitor.rs
libs/monarchy/tests/: 01_minimal.rs
libs/proc-macros/: Cargo.toml
libs/proc-macros/src/: lib.rs
libs/services/: Cargo.toml
libs/services/src/: lib.rs
modules/daw/: Cargo.toml  README_HTTP_SERVER.md
modules/daw/examples/: simple_osc_example.rs
modules/daw/instruments/: Cargo.toml
modules/daw/marker-region/: Cargo.toml
modules/daw/mix-fx/: Cargo.toml
modules/daw/primitives/: Cargo.toml
modules/daw/project/: Cargo.toml
modules/daw/src/: lib.rs  state.rs  streams.rs
modules/daw/tracks/: Cargo.toml
modules/daw/transport/: Cargo.toml  README.md
modules/dynamic-template/: Cargo.toml
modules/dynamic-template/src/: item-metadata.rs  item_metadata.rs  lib.rs  main.rs  metadata_patterns.rs
modules/dynamic-template/tests/: 01_minimal.rs  01_no_unneccesary_folders.rs  02_integration_drum_kit.rs  02_scoped_resorting.rs  multitrack_examples.rs
modules/fts/: Cargo.toml
modules/fts-plugin-core/: Cargo.toml
modules/fts-plugin-core/src/: dropdown.rs  dsp.rs  lib.rs  meters.rs  shell.rs  sizing.rs
modules/fts/lyrics/: Cargo.toml  LRXED_ANALYSIS.md  README.md  SYLLABLE_IMPLEMENTATION.md
modules/fts/naming-convention/: Cargo.toml  DEFAULT_GROUPS.md  IMPLEMENTATION_STATUS.md  NESTED_GROUPS.md  README.md  SUPPORTED_GROUPS.md
modules/fts/setlist/: Cargo.toml
modules/fts/smart-template/: Cargo.toml
modules/fts/src/: lib.rs
modules/fts/tests/: integration_test.rs
modules/fts/track-template/: Cargo.toml  README.md
modules/fts/visibility/: Cargo.toml  README.md  SORTING_GROUP_GUIDE.md
modules/fx/: Cargo.toml
modules/fx/src/: chain.rs  lib.rs  traits.rs
modules/peer-2-peer/: COMPARISON.md  Cargo.toml  README.md
modules/peer-2-peer/src/: iroh_connection.rs  lib.rs  main.rs  reaper_api.rs
modules/plugin-hub/: Cargo.toml
modules/plugin-hub/src/: client.rs  host.rs  lib.rs  protocol.rs  types.rs
modules/rppxml/: Cargo.toml
modules/rppxml/examples/: 01_print_track_hierarchy.rs  02_parse_markers_regions.rs
modules/rppxml/src/: lib.rs
modules/ui/: Cargo.toml
modules/ui/src/: lib.rs  reactive_state.rs
tools/generate-types/: Cargo.toml
tools/generate-types/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+1199 files in other folders)
