[workspace]
members = [
    "apps/reaper_extension",
    "libs/macros",
    "libs/monarchy",
    "libs/monarchy-derive",
    "libs/pdf",
    "libs/swell-ui",
    "modules/daw",
    "modules/dynamic-template",
    "modules/fts",
    "modules/peer-2-peer",
    "packages/keyflow",
    "packages/charts",
    "xtask",
    "apps/desktop",
    "apps/mobile",
    "apps/web",
    "modules/ui",
    "modules/api",
    "modules/rppxml",
]
# Rust 2024 implies resolver = "3" (Rust-version aware)
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Cody Wright"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/codywright/FastTrackStudio"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
dioxus = { version = "0.7.1", features = ["router"], default-features = false }
fragile = "2.0.1"
futures = "0.3"
libloading = "0.9"
nom = "8.0.0"

objc2 = "=0.3.0-beta.3"
objc2-foundation = "0.2.0"
palette = "0.7.3"
rand = "0.8"
raw-window-handle = "0.4.2"
scopeguard = "1.1.0"
serde_json = "1.0"
specta-typescript = "0.0.9"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
taurpc = "0.5.2"
thiserror = "1.0"
tracing = "0.1"
ui = { path = "modules/ui" }

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.reaper-common-types]
git = "https://github.com/helgoboss/reaper-rs.git"
branch = "master"
features = ["palette"]
package = "reaper-common-types"

[workspace.dependencies.reaper-high]
git = "https://github.com/helgoboss/reaper-rs.git"
branch = "master"

[workspace.dependencies.reaper-low]
git = "https://github.com/helgoboss/reaper-rs.git"
branch = "master"

[workspace.dependencies.reaper-medium]
git = "https://github.com/helgoboss/reaper-rs.git"
branch = "master"

[workspace.dependencies.rxrust]
git = "https://github.com/rxRust/rxRust"
rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.specta]
version = "2.0.0-rc.22"
features = [
    "derive",
    "uuid",
]

[workspace.dependencies.tarpc]
version = "0.37"
features = ["full"]

[workspace.dependencies.tauri]
version = "2"
features = []

[workspace.dependencies.tauri-build]
version = "2"
features = []

[workspace.dependencies.tokio]
version = "1.0"

[workspace.dependencies.irpc]
version = "0.11.0"
features = ["rpc", "derive", "quinn_endpoint_setup"]

[workspace.dependencies.tower]
version = "0.4"
features = ["util"]

[workspace.dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "uxtheme",
]

[workspace.dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]

[workspace.dependencies.quote]
version = "1.0"

[workspace.dependencies.proc-macro2]
version = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
# Allow unused code for now - will clean up later
# This allows unused variables, imports, functions, etc. without causing build failures
unused = { level = "allow", priority = -1 }
# Rust 2024 recommended lints
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.lints.clippy]
# Core lints - treat as errors
all = { level = "deny", priority = -1 }
# Performance-critical lints
redundant_clone = { level = "warn", priority = 1 }
needless_collect = { level = "warn", priority = 1 }
clone_on_copy = { level = "warn", priority = 1 }
# Style lints
needless_borrow = { level = "warn", priority = 1 }
manual_ok_or = { level = "warn", priority = 1 }
map_unwrap_or = { level = "warn", priority = 1 }
# Pedantic lints - more strict, enable as warnings
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
