[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local dependencies - import all modules that export types
daw = { path = "../modules/daw" }

# Utilities
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
