[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
color-eyre = "0.6"
tui-big-text = "0.7"
transport = { path = "../../modules/daw/transport" }
project = { path = "../../modules/daw/project" }
setlist = { path = "../../modules/fts/setlist" }
primitives = { path = "../../modules/daw/primitives" }

[lints]
workspace = true
