[package]
name = "desktop"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router" ] }
ui = { workspace = true }
fts = { path = "../../modules/fts", features = ["dioxus"] }
daw = { path = "../../modules/daw" }
keyflow = { path = "../../packages/keyflow" }
peer-2-peer = { path = "../../modules/peer-2-peer" }
pdf = { path = "../../libs/pdf" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
anyhow = "1.0"
base64 = "0.22"
rfd = "0.15.3"
futures = { workspace = true }
# Staff crate - UI feature requires dioxus-web which conflicts with desktop builds
# staff = { version = "0.11.0", features = ["ui"] }

# Server-only dependencies (excluded for WASM builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
irpc = { workspace = true }
irpc-iroh = "0.11.0"
iroh = { version = "0.95", features = ["discovery-local-network"] }
n0-future = "0.3.0"

[features]
default = ["desktop", "dioxus"]
desktop = ["dioxus/desktop" ]
dioxus = []  # Feature flag for dioxus-specific code
# Server feature - defined but not enabled by default
# Will be re-enabled incrementally when server features are added back
server = ["dioxus/server"]

[package.metadata.bundle]
# Bundle PDFium library with the app
resources = ["../../lib/libpdfium.dylib"]

[lints.rust]
unused = { level = "allow", priority = -1 }
