[package]
name = "dioxus-test"
version = "0.1.0"
authors = ["Cody Wright <acodywright@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lucide-dioxus = { version = "2.44", features = ["all-icons"] }
setlist = { path = "../../modules/fts/setlist" }
transport = { path = "../../modules/daw/transport" }
marker-region = { path = "../../modules/daw/marker-region" }
primitives = { path = "../../modules/daw/primitives" }
project = { path = "../../modules/daw/project" }
lumen-blocks = { git = "https://github.com/Leaf-Computer/lumen-blocks.git", tag = "v0.2.0" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
