[package]
name = "native-testing"
version.workspace = true
edition.workspace = true

[dependencies]
# Use dioxus-native from local forked blitz repo with post-processing support
dioxus-native = { path = "../../../reference/dioxus/blitz/packages/dioxus-native", features = ["prelude"] }

# Blitz crates from local fork
blitz-dom = { path = "../../../reference/dioxus/blitz/packages/blitz-dom" }
blitz-traits = { path = "../../../reference/dioxus/blitz/packages/blitz-traits" }

# Lumen Blocks - workspace dependency
lumen-blocks = { workspace = true }

# Icons
lucide-dioxus = "2"

# WGPU integration
wgpu = "26"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
nanorand = { version = "0.7", features = ["getrandom"] }
png = "0.17"

# WESL - Extended WGSL with imports and conditional compilation
wesl = "0.2"

[build-dependencies]
wesl = "0.2"

[lints]
workspace = true
