[package]
name = "native-testing"
version.workspace = true
edition.workspace = true

[dependencies]
# Use dioxus-native from forked blitz repo with post-processing support
dioxus-native = { git = "https://github.com/Codys-Wright/blitz.git", branch = "post-processing", features = ["prelude"] }

# Blitz crates from fork
blitz-dom = { git = "https://github.com/Codys-Wright/blitz.git", branch = "post-processing" }
blitz-traits = { git = "https://github.com/Codys-Wright/blitz.git", branch = "post-processing" }

# Lumen Blocks - workspace dependency
lumen-blocks = { workspace = true }

# Icons
lucide-dioxus = "2"

# WGPU integration
wgpu = "26"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
nanorand = { version = "0.7", features = ["getrandom"] }
png = "0.17"

# WESL - Extended WGSL with imports and conditional compilation
wesl = "0.2"

[build-dependencies]
wesl = "0.2"

[lints]
workspace = true
