[package]
name = "playground"
version = "0.1.0"
authors = ["Cody Wright <acodywright@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
lucide-dioxus = { version = "2.44", features = ["all-icons"] }
lumen-blocks = { git = "https://github.com/Leaf-Computer/lumen-blocks.git", tag = "v0.2.0" }
tracing = "0.1"
wasm-timer = "0.2"
setlist = { path = "../../modules/fts/setlist", features = ["dioxus"] }
transport = { path = "../../modules/daw/transport" }
iroh = "0.95.1"
iroh-blobs = "0.97.0"
iroh-gossip = "0.95.0"
irpc.workspace = true
irpc-iroh = "0.11.0"
peer-2-peer = { path = "../../modules/peer-2-peer" }
anyhow = "1.0"

# Server-only dependencies (excluded for WASM builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.0", features = ["time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
