[package]
name = "reaper_extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
fragile = "2.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
swell-ui = { path = "../../libs/swell-ui" }
anyhow = "1.0"
async-trait = "0.1"
transport = { path = "../../modules/daw/transport" }
project = { path = "../../modules/daw/project" }
primitives = { path = "../../modules/daw/primitives" }
marker-region = { path = "../../modules/daw/marker-region" }
setlist = { path = "../../modules/fts/setlist" }
peer-2-peer = { path = "../../modules/peer-2-peer" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
irpc = { workspace = true }
irpc-iroh = "0.11.0"
iroh = { version = "0.95", features = ["discovery-local-network"] }
n0-future = "0.3.0"

[lib]
name = "reaper_extension"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "allow"  # Required for low-level REAPER API calls

