[package]
name = "reaper_extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-low = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-high = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
reaper-rx = { git = "https://github.com/helgoboss/reaper-rs.git", branch = "master" }
rxrust = { git = "https://github.com/rxRust/rxRust", rev = "349e50b3197e05926e2378ef8fc45cb67ad43b83" }
fragile = "2.0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
swell-ui = { path = "../../libs/swell-ui" }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "2.0.17"
daw = { path = "../../modules/daw" }
setlist = { path = "../../modules/fts/setlist" }
lyrics = { path = "../../modules/fts/lyrics" }
uuid = { version = "1.0", features = ["v4", "serde"] }
enumflags2 = "0.7"
peer-2-peer = { path = "../../modules/peer-2-peer" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
irpc = { workspace = true }
irpc-iroh = "0.11.0"
iroh = { version = "0.95", features = ["discovery-local-network"] }
n0-future = "0.3.0"
crossbeam-channel = "0.5"

[lib]
name = "reaper_extension"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "allow"  # Required for low-level REAPER API calls

