[package]
name = "unified-service-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local services library
services = { path = "../../libs/services", features = ["full"] }

# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# RPC frameworks
tarpc = { version = "0.37", features = ["full"] }
taurpc = "2.0"

# Tauri for desktop mode
tauri = { version = "2.0", features = ["api-all"] }
tauri-plugin-shell = "2.0"

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "unified_service_demo"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "desktop"
path = "src/bin/desktop.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lints]
workspace = true
