[package]
name = "monarchy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A metadata-based hierarchical organization system for Rust"
keywords = ["hierarchy", "organization", "metadata", "sorting", "categorization"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
thiserror = { workspace = true }
monarchy_derive = { path = "../monarchy_derive" }

[dev-dependencies]

[features]
default = ["derive"]
derive = []
