[package]
name = "services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# RPC frameworks
tarpc = { version = "0.37", features = ["full"] }
taurpc = { version = "2.0" }

# Tauri integration
tauri = { version = "2.0" }
specta = { version = "2.0" }
specta-typescript = { version = "0.0.7" }

# Tracing
tracing = "0.1"
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry = { version = "0.30.0" }

# Error handling
thiserror = "2.0"
async-trait = "0.1"

[features]
default = []

[lib]
name = "services"
path = "src/lib.rs"

[lints]
workspace = true
