[package]
name = "daw"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
rpp = ["rpp-parser"]
full = ["rpp"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
thiserror = "2.0.17"
async-trait = "0.1.89"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1.0.100"
base64 = "0.22.1"
futures-util = "0.3.31"
helgoboss-midi = "0.4.0"
matchit = "0.9.0"
rosc = "0.11.4"

# Instruments module dependencies
strsim = "0.11"
regex = "1.0"
enum-iterator = "2.0"
indexmap = { version = "2.0", features = ["serde"] }
once_cell = "1.19"
rgb = { version = "0.8", features = ["serde"] }

# Server dependencies (excluded for WASM builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6", features = ["default", "ws"] }
http = "1.3.1"
hyper = "1.8.0"
tonic = "0.14.2"
tower = { version = "0.5.2", features = ["full"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.6.6", features = ["trace", "timeout", "cors"] }
reqwest = { version = "0.12.24", features = ["json"] }
irpc = { workspace = true }
irpc-iroh = "0.11.0"
iroh = { version = "0.95", features = ["discovery-local-network"] }

# RPP file parsing (optional)
rpp-parser = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[lints]
workspace = true

